--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -1069,7 +1069,7 @@ Quando o usuário aciona o botão de editar uma versão de um mapa a função lo
 
 \subsection{Exclusão de mapas} 
 
-O \textit{plugin} também possui a funcionalidade de exclusão de um mapa e as suas versões. As exclusões são realizadas através do envio de requests do tipo DELETE para a API do CMPaaS. Uma versão é apagada com o envio de uma request DELETE para a URI api/maps/id/versions/id/. Já para excluir um mapa é necessário enviar a mesma request para a URI api/maps/id/versions/id/.   
+O \textit{plugin} também possui a funcionalidade de exclusão de um mapa e as suas versões. As exclusões são realizadas através do envio de requests do tipo DELETE para a API do CMPaaS. Uma versão é apagada com o envio de uma request DELETE para a URI api/maps/id/versions/id/. Já para excluir um mapa é necessário enviar a mesma request para a URI api/maps/id/.   
 
 \chapter{Instalação e Testes}
 
